# rag-server-pytest

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schema.py
.github/workflows/: ci.yml
test/: test_root.py
utils/: pdf_text.py
